Update openapi.yml and bump API version 1.0.0 -> 1.1.0
